--- a/home.html
+++ b/home.html
@@ -2,6 +2,9 @@
 <html>
 <head>
 <style>
+
+
+
 ul {
   list-style-type: none;
   margin: 0;
@@ -23,7 +26,7 @@ li a {
 }
 
 li a:hover:not(.active) {
-  background-color: #111;
+  background-color: #cccfff;
 }
 
 .active {
@@ -37,11 +40,11 @@ li a:hover:not(.active) {
   <li><a href="#home">Home</a></li>
   <li><a href="#news">Products</a></li>
   <li><a href="#contact">Contact Us</a></li>
-  <li style="float:right"><a class="active" href="#about">Login</a></li>
-</ul>
+  <li style="float:right"><a class="active" href="#about">Login</a></li></ul>
 
 </body>
 </html>
+
 
 
 
